# ml_ops_dz1

./: .gitignore  README  docker-compose.dev.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
app/api/: all_models_handler.py  dataset_handler.py  models_handler.py  utils.py
app/clearml/: clearml_service.py
app/data_storage/mino/: datasets_storage.py  minio_helper.py  minio_init.py  mino_service.py  model_storage.py
app/data_storage/model/: model_status.py
app/grpc/: dataset_grpc_handler.py  model_grpc_handler.py
app/logger/: logger.py
app/models/: models.py
app/proto/: grpc_dataset_handler.proto  grpc_dataset_handler_pb2.py  grpc_dataset_handler_pb2_grpc.py  grpc_model_handler.proto  grpc_model_handler_pb2.py  grpc_model_handler_pb2_grpc.py
nginx/: nginx.conf
nginx/conf.d/: app.conf
